[gd_scene load_steps=7 format=2]

[ext_resource path="res://art/planet_hud/planet_hud16.png" type="Texture" id=1]
[ext_resource path="res://art/planet_hud/planet_hud14.png" type="Texture" id=2]
[ext_resource path="res://art/planet_hud/planet_hud15.png" type="Texture" id=3]
[ext_resource path="res://script/PortalButton.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "active",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "unused",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "used",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 4.69122, 4.69122 )

[node name="Portal" type="AnimatedSprite"]

frames = SubResource( 1 )
animation = "unused"
script = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="." index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Audio Bus", "Collision", "Pickable", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

position = Vector2( -33.9709, 4.20592 )
shape = SubResource( 2 )

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]

[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]

[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]


